# velo-visualiser

./: .gitignore  AGENTS.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  PRIVACY_POLICY.md  README.md  SECURITY.md  TRADEMARKS.md  build.gradle  gradle.properties  settings.gradle
.artifacts/20260621-211502-c406a80d-d45b-4136-be28-c805ef9ae558/: implementation_plan.artifact.md  walkthrough.artifact.md
.github/: FUNDING.yml  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
app/: build.gradle  proguard-rules.pro
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: AudioEngine.cpp  AudioEngine.h  CMakeLists.txt  CircularBuffer.h  FftProcessor.cpp  FftProcessor.h  LinkController.cpp  LinkController.h  native-lib.cpp
app/src/main/java/com/lowlatency/visualizer/: AsciiLogoView.kt  AudioCaptureService.kt  AudioManager.kt  BeatBus.kt  BeatDetector.kt  BeatPulse.kt  BeatSettings.kt  FourFourSync.kt  FourFourTracker.kt  GlowSettings.kt  HapticController.kt  HueManager.kt  HueStrobeSettings.kt  LightingSettings.kt  LinkManager.kt  LinkSync.kt  MainActivity.kt  MenuManager.kt  NativeBridge.kt  SecondaryVisualizerActivity.kt  SettingsManager.kt  SpectralOnsetDetector.kt  ThemeSettings.kt  VisualizerService.kt  VisualizerSurfaceView.kt
app/src/main/java/com/lowlatency/visualizer/audio/: AiffSource.kt  LocalAudioPlayer.kt  ToneGenerator.kt
app/src/main/java/com/lowlatency/visualizer/gl/: ApollonianAbyssScene.kt  AudioWebScene.kt  AuroraDriftScene.kt  BandWaveHistory.kt  BarSpectrumScene.kt  BeatFireworksScene.kt  BeatPulseScene.kt  CathedralMovement.kt  ChladniPlateScene.kt  ChromaticDotsScene.kt  CircularSpectrumScene.kt  CrtScopeScene.kt  CrystalSwarmScene.kt  DebugOverlay.kt  ElectricIrisScene.kt  EventHorizonScene.kt  FluidScene.kt  GlScene.kt  HdrEGLConfigChooser.kt  IntroLogoScene.kt  LaserArrayScene.kt  LedMatrix3DScene.kt  LedMatrixScene.kt  LevelMeterScene.kt  LiquidLightScene.kt  LissajousScopeScene.kt  LogoParticleScene.kt  MandalaPulseScene.kt  MandelboxScene.kt  MechanicalMeterScene.kt  MeridianScene.kt  MeridianShaders.kt  MeterCalibration.kt  NebulaMovement.kt  NebulaScene.kt  ObsidianScene.kt  OdysseyScene.kt  OscilloscopeScene.kt  PhaseScopeScene.kt  PhyllotaxisScene.kt  (+31 more)
app/src/main/java/com/lowlatency/visualizer/govee/: GoveeController.kt
app/src/main/java/com/lowlatency/visualizer/hue/: HueCredentialStore.kt  HueLightController.kt  HueModels.kt  HueSetupManager.kt  HueStreamClient.kt
app/src/main/java/com/lowlatency/visualizer/lifx/: LifxController.kt  LifxStore.kt
app/src/main/java/com/lowlatency/visualizer/nanoleaf/: NanoleafApi.kt  NanoleafColorEngine.kt  NanoleafController.kt  NanoleafCredentialStore.kt
app/src/main/java/com/lowlatency/visualizer/ui/: AudioSettingsController.kt  AudioSourceController.kt  CutoutClockView.kt  DisplayModeController.kt  FeelTheSpeedController.kt  FrameSparklineView.kt  HueMenuController.kt  InputDeviceController.kt  LightingController.kt  LinkMenuController.kt  LinkSyncController.kt  LocalPlaybackController.kt  MenuDiscoveryController.kt  MenuSheetController.kt  OverlayMetrics.kt  PerfOverlayController.kt  SceneCatalog.kt  SceneWheelView.kt  ScenesController.kt  SecondaryDisplayController.kt  SectionTabsView.kt  SectionWheelView.kt  ShuffleController.kt  ToneController.kt  VisualsMenuController.kt
app/src/main/java/com/lowlatency/visualizer/ui/lighting/: LightBrandPanel.kt  WledBrandPanel.kt
app/src/main/java/com/lowlatency/visualizer/wled/: WledController.kt  WledDevice.kt
app/src/main/res/anim/: fps_in_down.xml  fps_in_up.xml  fps_out_down.xml  fps_out_up.xml
app/src/main/res/color/: btn_text.xml  bulb_tile_text.xml
app/src/main/res/drawable/: beat_dot.xml  bulb_tile_bg.xml  chip_bg.xml  dialog_background.xml  ic_gpu_dot.xml  ic_gpu_dot_invisible.xml  ic_launcher_foreground.xml  ic_loop.xml  ic_notification.xml  ic_pause.xml  ic_swipe_up_cue.xml  ic_unlink.xml  ic_velo_v.xml  media_bar_bg.xml  media_seek_thumb.xml  perf_overlay_bg.xml  pill_button_bg.xml  seekbar_spectrum.xml  segment_button_bg.xml  sheet_background.xml
app/src/main/res/font/: clash_display.xml  inter.xml  satoshi.xml  space_mono.xml
app/src/main/res/layout/: activity_main.xml  dialog_about.xml  dialog_advanced.xml  dialog_privacy.xml  item_favourite_pill.xml  layout_connection_status.xml  layout_hue_container.xml  layout_lifx_container.xml  layout_nanoleaf_container.xml  layout_wled_container.xml  lifx_bulb_item.xml
app/src/main/res/values/: colors.xml  dimens.xml  strings.xml  styles.xml  themes.xml
app/src/main/res/values-land/: dimens.xml  styles.xml
app/src/main/res/values-sw600dp/: dimens.xml
app/src/main/res/values-sw600dp-land/: dimens.xml
app/src/main/res/xml/: network_security_config.xml
app/src/test/java/com/lowlatency/visualizer/gl/: MeterCalibrationTest.kt  ShaderValidationTest.kt
config/detekt/: baseline.xml  detekt.yml
docs/: index.html
gradle/wrapper/: gradle-wrapper.properties
playstore/: _generate.py
